--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@js-temporal/polyfill": "^0.4.1",
+    "autoprefixer": "^10.4.5",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "postcss": "^8.4.13",
     "realm-web": "^1.7.0",
+    "tailwindcss": "^3.0.24",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.1",
+    "@ionic/cli": "6.19.0",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
