--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.13",
     "realm-web": "^1.7.0",
     "tailwindcss": "^3.0.24",
+    "v-viewer": "^3.0.10",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
