--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,9 +2,5 @@
 	"appId": "io.ionic.starter",
 	"appName": "Habu",
 	"webDir": "dist",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.1.26:8100/",
-		"cleartext": true
-	}
+	"bundledWebRuntime": false
 }
